# rs-oidc-provider-metadata

./: Cargo.toml  README.md  example.sh  rs-oidc-provider-metadata
src/: lib.rs  main.rs
