[package]
name = "rs-oidc-provider-metadata"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"

[dependencies.openidconnect]
version = "4.0.0"
default-features = false
features = [
	"reqwest",
	"rustls-tls",
]

[dependencies.serde_json]
version = "1.0.140"
default-features = false
features = [
	"std",
]

[dependencies.tokio]
version = "1.46.0"
default-features = false
features = [
	"macros",
	"rt-multi-thread",
]

[dependencies.reqwest]
version = "0.12.22"
default-features = false
features = [
	"charset",
	"default-tls",
	"http2",
	"system-proxy",
]
